# cpp11sandbox

./: .gitmodules  CMakeLists.txt  constgen.cpp  longevity1.cpp  longevity2.cpp  refcast.cpp  refmember.cpp  undef.cpp
asm/: CMakeLists.txt  basic.cpp  stdcall.cpp  stdcall2.cpp  stdcall3.cpp
boost/: CMakeLists.txt  filesystem.cpp  serialize.cpp  stack_trace.cpp  thread_and_future_boost4.cpp  thread_pool.cpp  thread_pool.h  thread_pool2.cpp  thread_without_join.cpp  thread_without_join_boost.cpp  wait_for_any_boost4.cpp
c/: CMakeLists.txt  float_return.c
compiler_warning/: CMakeLists.txt
compiler_warning/anonymous_struct/: CMakeLists.txt  anonymous_struct.cpp
compiler_warning/signed_vs_unsigned/: CMakeLists.txt  implicit_cast_from_unsigned.cpp
cpp11/: CMakeLists.txt  addrref.cpp  auto1.cpp  boost_exception.cpp  classsize.cpp  constgen.cpp  floatdivzero.cpp  friendprivinherit.cpp  initialization.cpp  initlist1.cpp  is_tests.cpp  isrlvalue.cpp  issametype.cpp  longevity1.cpp  longevity3.cpp  macrofunc1.cpp  maketuple.cpp  mod1.cpp  perfectfwd.cpp  perfectfwd2.cpp  privinherit.cpp  refwrap.cpp  remove.cpp  selfclone.cpp  stringopt.cpp  templatetemplate.cpp  tie.cpp
cpp11/optimize/: strings1.cpp  test_watch.cpp  watch.h
cpp17/: CMakeLists.txt  add_pointer.cpp  aligned_alloc.cpp  alignment.cpp  anonymous_union.cpp  any1.cpp  args_to_thread.cpp  array_of_reference_wrapper.cpp  bitset.cpp  char_compare.cpp  class_wo_default_constructor.cpp  classsize.cpp  const_function_updating_reference.cpp  const_infect.cpp  const_rvref.cpp  container_default_size.cpp  default_construct.cpp  digraph.cpp  dynamic_cast1.cpp  emplace_back_returns_ref.cpp  enum1.cpp  extract_node.cpp  friend1.cpp  function.cpp  function1.cpp  function2.cpp  function_parameters1.cpp  functionpointer1.cpp  future_and_promise.cpp  gc1.cpp  gnu_cxx_version.cpp  hardware_destructive_interference_size.cpp  hash_of_double.cpp  hiding.cpp  incomplete_type.cpp  incomplete_type2.cpp  initialize_map.cpp  interpreter.cpp  lambda1.cpp  less1.cpp  (+48 more)
cpp17/basic_io/: basic_types.cpp  binary.cpp  options.cpp  ostream1.cpp  seek1.cpp  simple.cpp  simple2.cpp  status1.cpp  stream_iterator1.cpp  tie.cpp
cpp17/cyclic_dependency/: a.cpp  a.h  b.cpp  b.h
cpp17/declaration_only/: dec.h  def.cpp
cpp17/mt/: cv_ping_pong.cpp
cpp20/: CMakeLists.txt  spaceship.cpp
cpp20/mt/: atomic_flag_ping_pong.cpp
cpp98/: CMakeLists.txt  ifdecl.cpp
glog/: CMakeLists.txt  try_glog.cpp
malloc/: CMakeLists.txt  test.cpp
nortti/: CMakeLists.txt  main.cpp
tbb/: CMakeLists.txt  basic_containers.cpp  cache_aligned_allocator.cpp
